# turbo-guide

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
01/: day01.py  main.py
02/: day02.py  main.py
03/: day03.py
04/: day04.py
05/: day05.py
06/: day06.py
07/: day07.py  main.py
08/: day08.py
09/: day09.py
10/: day10.py
11/: day11.py
12/: day12.py
13/: day13.py
14/: day14.py
15/: day15.py
16/: day16.py
17/: day17.py
18/: day18.py
19/: day19.py
20/: day20.py
2023/02/: day02.py
2023/03/: day03.py
2023/04/: day04.py
2023/07/: day07.py
2023/09/: day09.py
2023/10/: day10.py
2023/11/: day11.py
2023/14/: day14.py
2023/15/: day15.py
2023/17/: day17.py
2023/18/: day18.py
2023/21/: day21.py
2023/24/: day24.py
2024/01/: day01.py
2024/02/: day02.py
2024/03/: day03.py
2024/04/: day04.py
2024/05/: day05.py
2024/06/: day06.py
2024/07/: day07.py
2024/08/: day08.py
2024/09/: day09.py
2024/10/: day10.py
2024/11/: day11.py
2024/12/: day12.py
2024/13/: day13.py
2024/14/: day14.py
2024/15/: day15.py
2024/16/: day16.py
2024/17/: day17.py
2024/18/: day18.py
2024/19/: day19.py
2024/20/: day20.py
2024/21/: day21.py
2024/22/: day22.py
2024/23/: day23.py
2024/24/: day24.py
2024/25/: day25.py
21/: day21.py
22/: day22.py
23/: day23.py
24/: day24.py
25/: day25.py
