[tool.poetry]
name = "aoc-2023"
version = "0.1.0"
description = "advent of code 2023"
authors = ["Elliot Voris <elliot@voris.me>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
data-structures = {path = "/Users/elliotvoris/Dev/experiments/data-structures", develop = false}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
