[tool.poetry]
name = "aoc-2023"
version = "0.1.0"
description = "advent of code 2023"
authors = ["Elliot Voris <elliot@voris.me>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
data-structures = {path = "/Users/elliotvoris/Dev/experiments/data-structures", develop = false}


[tool.poetry.group.dev.dependencies]
pylint = "^3.0.2"
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
