[tool.poetry]
name = "aoc"
version = "0.1.0"
description = "advent of code"
authors = ["Elliot Voris <elliot@voris.me>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
data-structures = {path = "/Users/elliotvoris/Dev/data-structures", develop = false}


[tool.poetry.group.dev.dependencies]
pylint = "^3.3.1"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.'messages control']
disable = ["duplicate-code"]
